<resources>
    <string name="app_name">Give.Share.Cherish</string>
    <string name="welcome_title_text">Give.Share.Cherish</string>
    <string name="get_started_text">GET STARTED</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add_eventbtn_text">Add Event</string>
    <string name="Add_an_event">ADD AN EVENT</string>
    <string name="go_back_textbtn">Go Back</string>
    <string name="dummytext_charity">Beach Clean Up</string>
    <string name="dummy_text_date">31 Aug 2022</string>
    <string name="paritcipant_text_tag">participants</string>
    <string name="dummy_text_prcount">34</string>
    <string name="view_eventbtn">View This Event</string>
    <string name="dummytext_charity2">Library Renovation</string>
    <string name="dummy_text_date1">21 Sep 2022</string>
    <string name="join_event">Join event Button</string>
    <string name="About_Us_Title">About</string>
    <string name="Objective">Our Aim:</string>
    <string name="dummy_text_prcount2">12</string>
    <string name="contact_us_btn_text">Contact Us</string>
    <string name="Contact_Us_title">Reach Out</string>
    <string name="contact_us_phone_num">+94712234185</string>
    <string name="email_contact_us">udn992110@gmail.com</string>
    <string name="enter_user_name">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="Login">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="admin_view_text">Admin Login</string>
    <string name="admin_login_header">Admin Login</string>
    <string name="event_list_header">Event List</string>
    <string name="delete_btn">Delete Button</string>
    <string name="delete_text">Delete</string>
    <string name="why_us_text">Why Choose Us?</string>
    <string name="menu_profile">User Profile</string>
    <string name="About_us_menu">About Us</string>
    <string name="dummy_posted_time2">2 weeks ago</string>
    <string name="dummy_posted_time">22 minutes ago</string>
    <string name="dummytext_charity3">Summer Restoking</string>
    <string name="dummy_text_usercontacts">+94718047787</string>
    <string name="dummytext_charity4">Help while Eating</string>
    <string name="dummy_text_phone_number">+94718047787</string>
    <string name="update_this_event">UPDATE THIS EVENT</string>
    <string name="dummy_text_usercontacts2">+9714319740</string>
    <string name="sign_in_text">Don\'t have an account?</string>
    <string name="enter_event_desc">Enter Event Description</string>
    <string name="dummy_text_username2">Janaki Karalliyadde</string>
    <string name="enter_event_location">Enter Event Location</string>
    <string name="dummy_text_username">Hasanjana Seneviratne</string>
    <string name="update_this_event_banner">Update This Event</string>
    <string name="forgot_password_link"><u>Forgot Password??</u></string>
    <string name="dummy_text_location2">Kandy Soya Center Complex</string>
    <string name="dummy_text_location3">Samanala Uyana, Watapuluwa</string>
    <string name="enter_event_count">Enter Intial Participant Count</string>
    <string name="dummy_text_location">Colombo Mucipality Beach Range</string>
    <string name="dummy_text_location1">Kappetipola Central College[Behind KCC]</string>
    <string name="dummy_text_event_Desc">I guess it is out priority as citizens of the country to protext the marine environment</string>
    <string name="dummy_text_event_Desc1">We are Planing to renovate the Library of Kappetipola Central College</string>
    <string name="dummy_text_event_Desc2">We are gathering volunteers to wrap up packages that will be sent to orphanages island wide</string>
    <string name="our_aim_descText">Making Sri Lanka a slightly  better place with sharing and building a space that would benefit one another</string>
    <string name="why_choose_us_text">We are secure and user friendly, which would benefit our users to do there interaction safely and fastly.
        Enjoy your experience with us</string>
    <string name="user_view_text">User Login</string>
    <string name="admin_loginbtn">admin_login_btn</string>
    <string name="user_login_header">User Login</string>
    <string name="enter_full_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_telphone">Enter your phone number</string>
    <string name="enter_dob">Enter your date of Birth</string>
    <string name="add_your_details_header">Add Your Details</string>
    <string name="enter_admin_id">Enter Admin ID</string>
    <string name="donation_manager">Donation Manager</string>
    <string name="delivery_manager">Delivery Manager</string>
    <string name="enter_work_ID">Enter Work ID</string>
    <string name="wel_delm">Welcome Delivery Manager!</string>
    <string name="wel_donm">Welcome Donation Manager!</string>
    <string name="admin_id_don">IT20708276</string>
    <string name="admin_name">U.D.K Navaratne</string>
    <string name="admin_email">udn992110@gmail.com</string>
    <string name="my_page_donation_man">View My Page</string>
    <string name="enter_name">Name with Intials</string>
    <string name="add_donation">Add_donation</string>
    <string name="don_if_empty_text">Click on \"+\" to Add your Donation</string>
    <string name="did_text">1</string>
    <string name="org_name_dummy_text">Sigithi Lama Sewana</string>
    <string name="contact_don_dummy">0718047787</string>
    <string name="Add_donations_text">ADD A DONATION</string>
    <string name="did_insrt_text">DID</string>
    <string name="enter_did_hint">Enter DID</string>
    <string name="orgname_text">Organization Name</string>
    <string name="org_name_hint">Enter Organization Name</string>
    <string name="enter_contact_hint">Enter Contact No</string>
    <string name="enter_don_list">Enter Donation List</string>
    <string name="enter_don_amount">Enter Donation Amount</string>
    <string name="add_donations">Add Donation</string>
    <string name="update_donationbtn">Update Donation</string>
    <string name="update_donationAmount">Update Amount</string>
    <string name="update_donations_text">Update Donation</string>
    <string name="enter_total_amount">Total Amount</string>
    <string name="donated_Amount">Donated Amount</string>
    <string name="Remain_Amount">Remaining Amount</string>
    <string name="update_don_amount">Update Donation Amount</string>
    <string name="wel_user_text">Welcome ,ChangeMaker!</string>
    <string name="enter_your_email">Enter Email Address</string>
    <string name="donationsbtnuser">Donations</string>
    <string name="allcharitybtn">All Charity Events</string>
    <string name="userscharitybtn">User\'s Charity Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Donate_to_poor_in_Anuradhapura">Donate to poor in Anuradhapura</string>
    <string name="view_donations">View</string>
    <string name="Donations_List">Donations</string>
    <string name="Donation_Name">Donation Name goes here</string>
    <string name="donation_number_here">1</string>
    <string name="donation_contact_number">donation_contact_number</string>
    <string name="amount_nedeed_for_this_donation">Amount Nedeed For this Donation:</string>
    <string name="donate_btn">Donate</string>
    <string name="title_activity_user_card_list">UserCardList</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_payment_method">My Payment Method</string>
    <string name="enter_your_card_number">Enter your Card Number</string>
    <string name="enter_card_name">Enter the Card Name</string>
    <string name="valid_through_date">XX/XX/XXXX</string>
    <string name="valid_through">Valid Through</string>
    <string name="CVN_code">CVN Code</string>
    <string name="CVN_code_hint">XXXX</string>
    <string name="terms_and_cond">Send my card details for faster payment</string>
    <string name="add_card_details_header">Add Your Card Details</string>
    <string name="add_card_details">Add Card</string>
    <string name="click_instr_card">Click on \"+\" to add a card</string>
    <string name="update_cardbtn">Update This Card</string>
    <string name="pay_from_card">Pay</string>
    <string name="title_activity_payment_page">PaymentPage</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Donation_det">Donation Details</string>
    <string name="packages_1_donation">10000.00</string>
    <string name="packages_2_donation">5000.00</string>
    <string name="packages_3_donation">1000.00</string>
    <string name="donate_calculation">Choose</string>
    <string name="donate_instr">In order to donate choose a package</string>
    <string name="view_all_fragment">View Users Fragments</string>
    <string name="My_Events_header">My Events</string>
    <string name="no_events_hint">You can add events by clicking the \"+\" button below</string>
    <string name="add_event">add an event</string>
    <string name="back_btn_text">Back</string>
    <string name="event_name_dummy_text">Event Name</string>
    <string name="all_events_intro">Charity events posted by various uses are listed below if you are willing to join Click on the Join button and Make sure to contact the event owner</string>
    <string name="space" />
    <string name="enter_don_location">Enter Donation Location</string>
    <string name="tobedel">To Be Delivered</string>
    <string name="pickup">Pick Up</string>
    <string name="pending_del_header">Pending Deliveries</string>
    <string name="Add_to_pickUp">Add to Pick Up</string>
    <string name="donation_id">Delivery ID:</string>
    <string name="del_location">Delivery Location Goes Here</string>
    <string name="enter_pickup_time">Enter Pickup Time</string>
    <string name="del_status">Delivery Status:</string>
    <string name="package_3_delivery">Delivered</string>
    <string name="package_2_delivery">On the way</string>
    <string name="package_1_delivery">Pick up</string>
    <string name="save_del">Save</string>
    <string name="del_person">Deliver Person Name Goes Here</string>
    <string name="pickup_del">To Pick Up</string>
    <string name="space_text">"  "</string>
    <string name="update_del">Update Delievery</string>
    <string name="delte_del">Delete Delivery</string>
    <string name="address_text">Address:</string>
    <string name="donation_list_text">Donation List:</string>
    <string name="Update_this_card">Update this Card</string>
    <string name="update_card_number">Update Card Number</string>
    <string name="update_card_name">Card Name</string>
    <string name="cvn_number">XXXX</string>
    <string name="delete_card_btn">Delete</string>
    <string name="sponsorships">Sponsor Amount</string>
    <string name="rupees_tag">Rs.</string>
    <string name="sponsr_btntxt">Sponsor</string>
    <string name="phn_tag">+94</string>
    <string name="join_insrt">If you are willing to join this event click join and contact owner</string>
    <string name="choose_card_text">Choose</string>
    <string name="enter_sponsor">Enter your amount</string>
</resources>