<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="EventManagement.EventDetails">


    <!--background design-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="277dp"
        android:layout_height="219dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/event_insrt_background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="336dp"
        android:layout_height="407dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438"
        app:srcCompat="@drawable/event_insrt_background2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="209dp"
        android:layout_height="217dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877"
        app:srcCompat="@drawable/event_insrt_background3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="163dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/event_insrt_background2" />


    <!--body design-->

    <LinearLayout
        android:id="@+id/list_layout_linear"
        style="@style/user_name_tag"
        android:layout_width="345dp"
        android:layout_height="51dp"
        android:background="@drawable/event_insrt_background5"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/username_list_text"
            android:textStyle="bold"
            style="@style/user_name_tag"
            android:text="@string/dummy_text_username">


        </TextView>

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/space"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/phn_tag"/>
        <TextView
            android:id="@+id/user_contacts_list"
            style="@style/user_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:gravity="right"
            android:text="@string/dummy_text_usercontacts">
        </TextView>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="303dp"
        android:layout_height="218dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        app:srcCompat="@drawable/event_det_pic" />

    <TextView
        android:id="@+id/prcount_view"
        android:layout_width="119dp"
        android:layout_height="75dp"
        android:gravity="center_horizontal"
        android:text="@string/dummy_text_prcount"
        android:textSize="@dimen/pr_count_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        android:background="@drawable/event_insrt_background3"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/list_layout_linear"
        app:layout_constraintVertical_bias="0.094">


    </TextView>

    <TextView
        android:id="@+id/participant_tag"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="44dp"

        android:text="@string/paritcipant_text_tag"
        app:layout_constraintBottom_toBottomOf="@+id/prcount_view"
        app:layout_constraintEnd_toEndOf="@+id/prcount_view"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/prcount_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView

        android:id="@+id/event_name_text"
        android:layout_width="259dp"
        android:layout_height="77dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/dummytext_charity3"
        android:textSize="@dimen/welcome_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/prcount_view"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_layout_linear"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/event_desctext2"
        android:layout_width="352dp"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:text="@string/dummy_text_event_Desc2"
        android:textSize="@dimen/desc_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

    </TextView>


    <ImageView
        android:id="@+id/location_sign"
        android:layout_width="41dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/event_locationview"
        app:layout_constraintEnd_toStartOf="@+id/event_locationview"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_text"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:id="@+id/event_locationview"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:padding="@dimen/button_pad"
        android:text="@string/dummy_text_location2"
        android:textColor="@color/dashboardUI1"
        android:textSize="@dimen/welcome_pad_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_desctext2">

    </TextView>

    <androidx.cardview.widget.CardView

        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:padding="@dimen/button_pad"
        app:cardCornerRadius="@dimen/wel_corner_rad"
        app:cardElevation="@dimen/welcome_tag"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/back_btn_eventdet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_locationview"
        app:layout_constraintVertical_bias="0.060000002">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="48dp"
                android:padding="@dimen/button_pad"
                android:text="@string/rupees_tag" />


            <EditText
                android:id="@+id/sponsor_amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/sponsorships"
                android:minHeight="48dp"
                android:padding="@dimen/button_pad"
                android:textColorHint="@color/contact_usbtn" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sponsr_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_pad"
        android:background="@drawable/event_insrt_background4"
        android:minHeight="48dp"
        android:text="@string/sponsr_btntxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/event_locationview"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/join_instr"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:text="@string/join_insrt"
        android:textSize="@dimen/btn_gap_donations"
        app:layout_constraintBottom_toTopOf="@+id/back_btn_eventdet"
        app:layout_constraintEnd_toStartOf="@+id/joint_event_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.511" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/joint_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/join_event"
        android:src="@drawable/ic_baseline_group_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.26" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_btn_eventdet"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:background="@color/def_btn_color"
        android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
        android:text="@string/go_back_textbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joint_event_btn"
        app:layout_constraintVertical_bias="0.32999998">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>