<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView

        android:id="@+id/cardviiew_pending_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/wel_corner_rad"
        app:cardElevation="@dimen/welcome_tag"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/pend_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/admin_name"
            app:layout_constraintBottom_toTopOf="@+id/cardviiew_pending_del">

            <TextView
                android:id="@+id/pick_del_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Donate_to_poor_in_Anuradhapura"
                android:textSize="@dimen/admin_name"
                android:layout_marginBottom="@dimen/card_donations"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pickup_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No.45, Bomaluwa Rd"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/view_eventbtn"
                    android:text=" ">

                </TextView>
                <TextView
                    android:id="@+id/pickup_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="contactNumber">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="@dimen/card_donations">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/view_del"
                    android:layout_width="74dp"
                    android:layout_height="48dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/admin_name"
                    android:background="@drawable/event_insrt_background5"
                    android:text="@string/view_donations"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView5reg"
                    app:layout_constraintVertical_bias="0.29000002" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>